; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/qcommon/extr_vm_ppc.c_fltopandsecond.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/qcommon/extr_vm_ppc.c_fltopandsecond.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PPC_LFS = common dso_local global i32 0, align 4
@R_TOP = common dso_local global i32 0, align 4
@R_OPSTACK = common dso_local global i32 0, align 4
@R_SECOND = common dso_local global i32 0, align 4
@PPC_ADDI = common dso_local global i32 0, align 4
@qfalse = common dso_local global i32 0, align 4
@rtopped = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @fltopandsecond to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fltopandsecond() #0 {
  %1 = load i32, i32* @PPC_LFS, align 4
  %2 = load i32, i32* @R_TOP, align 4
  %3 = load i32, i32* @R_OPSTACK, align 4
  %4 = call i32 @InstImm(i32 %1, i32 %2, i32 %3, i32 0)
  %5 = load i32, i32* @PPC_LFS, align 4
  %6 = load i32, i32* @R_SECOND, align 4
  %7 = load i32, i32* @R_OPSTACK, align 4
  %8 = call i32 @InstImm(i32 %5, i32 %6, i32 %7, i32 -4)
  %9 = load i32, i32* @PPC_ADDI, align 4
  %10 = load i32, i32* @R_OPSTACK, align 4
  %11 = load i32, i32* @R_OPSTACK, align 4
  %12 = call i32 @InstImm(i32 %9, i32 %10, i32 %11, i32 -8)
  %13 = load i32, i32* @qfalse, align 4
  store i32 %13, i32* @rtopped, align 4
  ret void
}

declare dso_local i32 @InstImm(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
